...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/result_tv"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="0"
        android:textAlignment="textEnd"
...
                android:text="@string/button_sqrt"
                android:textColor="@color/white"
                android:textSize="10dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/button_divide"
...
                android:text="@string/button_8"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button_9"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/button_multiply"
...
                android:text="@string/button_4"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button_5"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button_6"
                android:textColor="@color/white"
...
                android:text="@string/button_1"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button_2"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/button_3"
                android:textColor="@color/white"
...
                android:text="@string/button_dot"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/button_equals"
...
